# keebmidi

./: Cargo.toml  LICENSE  README.md
docs/: design_doc.md  feature_midi_knob_support.md
src/: errors.rs  main.rs
src/actions/: executor.rs  keyboard.rs  macro_runner.rs  mod.rs
src/app/: events.rs  mod.rs  reducer.rs  state.rs
src/config/: load.rs  mod.rs  model.rs  save.rs
src/input/: key_capture.rs  mod.rs  terminal.rs
src/midi/: decode.rs  manager.rs  mod.rs  trigger.rs
src/platform/: capabilities.rs
src/ui/: draw.rs  mod.rs
src/ui/components/: details.rs  mapping_list.rs  mod.rs  modal.rs  status_bar.rs
